Lade till repeatrar SM7-land

--- a/rhb.tex
+++ b/rhb.tex
@@ -682,8 +682,193 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 	Repeater          & FM           & SK5RHQ        & Västerås          &          145.7750 &        -600KHz & 1750/82,5Hz     &       QRV       & JO89GO
 \end{longtable}
 \normalsize
-
-
+\subsection{Repeatrar distrikt 6}
+\footnotesize
+\begin{longtable}{llllrrlcl}
+	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+	Repeater          & FM           & SK6RIC        & Alingsås            &          145.6250 &        -600KHz & 1750/114,8Hz    &       QRV       & JO67GW           \\
+	Repeater          & FM           & SK6RIC        & Alingsås            &          434.6250 &          -2MHz & 1750/114,8Hz    &       QRV       & JO67GW           \\
+	Repeater          & FM           & SA6AR/R       & Angered             &          434.9250 &          -2MHz & 1750Hz          &       QRV       & JO67AT           \\
+	Repeater          & FM           & SK6RFP        & Billingsfors        &          145.7000 &        -600KHz & 118,8Hz         &       QRV       & JO69CA           \\
+	Repeater          & FM           & SL6ZYW/R      & Billingsfors        &          434.7000 &          -2MHz & 1750Hz          &       QRV       & JO69CA           \\
+		\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+	Repeater          & FM           & SA6RP/R       & Björboholm          &          434.8250 &          -2MHz & 118,8Hz         &       QRV       & JO67DV           \\
+	Repeater          & FM           & SK6LK/R       & Borås               &          145.7750 &        -600KHz & 1750/114,8Hz    &       QRV       & JO67MR           \\
+	Repeater          & FM           & SK6RBS        & Borås               &          434.8000 &          -2Mhz & 1750Hz          &       QRV       & JO67MR           \\
+	Hotspot           & D-Star       & SG6BWX-C      & Borås               &          145.2875 &                & DV Carrier      &       QRV       & JO67LR           \\
+	Repeater          & DMR          & SM6TKT/R      & Borås               &          434.5500 &          -2MHz & 240610          &       QRV       & JO67LR           \\
+	Repeater          & FM           & SK6JX/R       & Falkenberg          &          434.6250 &        -1,6MHz & 1750Hz          &       QRT       & JO66FV           \\
+	Repeater          & FM           & SK6JX/R       & Falkenb./Arvidst.   &          145.6250 &        -600KHz & 1750Hz/DTMF 1   &       QRV       & JO66FV           \\
+	Repeater          & FM           & SA6AEG/R      & Falköping           &          434.6000 &        -1,6MHz & 1750Hz          &       QRV       & JO68SE           \\
+	Repeater          & FM           & SK6HD/R       & Falköping           &          145.7250 &        -600KHz & 1750Hz          &       QRT       & JO68SE           \\
+	Link              & FM           & SA6RP         & Floda               &          433.4750 &                & Carrier         &       QRV       & JO67ET           \\
+	Repeater          & FM           & SK6GO/R       & Göteborg            &          145.7875 &        -600KHz & 1750/114,8Hz    &       QRV       & JO57XQ           \\
+	Repeater          & FM           & SK6GO/R       & Göteborg            &          145.6875 &        -600KHz & 1750/118,8Hz    &       QRT       & JO57XR           \\
+	Repeater          & FM           & SK6GO/R       & Göteborg            &          434.6500 &          -2MHz & 1750/114,8Hz    &       QRT       & JO57XQ           \\
+	Repeater          & D-Star       & SK6RKI-C      & Göteborg            &          145.5875 &        -600KHz & DV Carrier      &       QRV       & JO67XQ           \\
+	Repeater          & FM           & SK6RFQ        & Göteborg            &           29.6800 &        -100KHz & 1750/114,8Hz    &       QRV       & JO57XQ           \\
+	Repeater          & D-Star       & SK6SA-B       & Göteborg            &          434.5125 &          -2MHz & DV Carrier      &       QRV       & JO57XQ           \\
+	Hotspot           & D-Star       & SE6H-B        & Göteborg            &          433.5250 &        Simplex & DV Carrier      &       QRV       & JO67AR           \\
+	Repeater          & DMR          & SG6DMR        & Göteborg            &          434.7625 &          -2MHz & 240699          &      Plan       & JO57XQ           \\
+	Link              & FM           & SM6FZG        & Göteb./Aleklätt.    &          144.6125 &        Simplex & 146,2Hz         &       QRV       & JO67AV           \\
+	Repeater          & FM           & SK6RDG        & Göteb./Guldheden    &          434.9750 &          -2MHz & 1750/114,8Hz    &       QRV       & JO57XQ           \\
+	Repeater          & FM           & SK6RKI        & Göteb./Guldheden    &         1297.1500 &          -6MHz & 1750            &       QRV       & JO57XQ           \\
+	Repeater          & FM           & SK6RFQ        & Göteb./Guldheden    &          145.6500 &        -600KHz & 1750/114,8 Hz   &       QRV       & JO57XQ           \\
+	Repeater          & FM           & SK6RFQ        & Göteb./Guldheden    &          434.6000 &          -2MHz & 1750/114,8Hz    &       QRV       & JO57XQ           \\
+	Link              & FM           & SM6FZG        & Göteb./Guldheden    &          144.5750 &        Simplex & 146,2Hz         &       QRV       & JO57XQ           \\
+	Repeater          & FM           & SK6RKI        & Göteb./Hönö         &          145.7500 &        -600KHz & 1750            &       QRT       & JO57TQ           \\
+	Repeater          & FM           & SK6RKI        & Göteborg/Hönö       &          434.8500 &        -1,6MHz & 1750            &       QRT       & JO57TQ           \\
+	Link              & FM           & SM6FZG        & Göteborg/Hönö       &           144.625 &        Simplex & 146,2Hz         &       QRV       & JO57TQ           \\
+	Link              & FM           & SM6FZG        & Göteb./Kortedala    &          144.6000 &        Simplex & 146,2Hz         &       QRV       & JO67AS           \\
+	Link              & FM           & SM6FZG        & Göteb./Landvetter   &          144.5625 &        Simplex & 146,2Hz         &       QRV       & JO67CQ           \\
+	Link              & FM           & SM6FZG        & Göteb./Långedrag    &          144.5250 &        Simplex & 146,2Hz         &       QRV       & JO57WQ           \\
+	Link              & FM           & SM6FZG        & Göteb./Mölnlycke    &          144.5875 &        Simplex & 146,2Hz         &       QRV       & JO67BP           \\
+	Link              & FM           & SM6FZG        & Göteb./Skårsjön     &          144.5500 &        Simplex & 146,2Hz         &       QRV       & JO67AN           \\
+	Link              & FM           & SM6FZG        & Göteb./Skårsjön     &           51.5500 &        Simplex & 146,2Hz         &       QRV       & JO67AN           \\
+	Link              & FM           & SM6FZG        & Göteb./Skårsjön     &           29.5500 &        Simplex & 146,2Hz         &       QRV       & JO67AN           \\
+		\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+	Repeater          & FM           & SM6YOF/R      & Göteb./Torslanda    &          434.9500 &          -2MHz & Carrier         &       QRV       & JO57VS           \\
+	Link              & FM           & SM6FZG        & Göteb./V. Frölunda  &          144.5375 &        Simplex & 146,2 Hz        &       QRV       & JO57XP           \\
+	Link              & FM           & SM6CYJ        & Götene              &          145.3250 &                & 71,9 Hz         &       QRV       & JO68RM           \\
+	Repeater          & FM           & SL6BH/R       & Halmstad            &          434.7500 &          -2MHz & 114,8 Hz        &       QRV       & JO66KQ           \\
+	Repeater          & FM           & SK6RKG        & Halmstad            &          145.6750 &        -600KHz & 114,8 Hz        &       QRV       & JO66MS           \\
+	Repeater          & FM           & SK6RKG        & Halmstad            &          434.9250 &          -2MHz & 114,8 Hz        &       QRV       & JO66MS           \\
+	Hotspot           & D-Star       & SG6RHB-B      & Halmstad            &          433.4250 &                & DV Carrier      &       QRV       & JO66LP           \\
+	Hotspot           & D-Star       & SG6JWU-C      & Halmstad            &          145.3375 &        Simplex & DV Carrier      &       QRV       & JO66LP           \\
+	Hotspot           & D-Star       & SG6JWU-B      & Halmstad            &          433.4750 &        Simplex & DV Carrier      &       QRV       & JO66LP           \\
+	Repeater          & FM           & SK6MA/R       & Hjo                 &          145.6375 &        -600KHz & 1750            &       QRV       & JO78DH           \\
+	Hotspot           & D-Star       & SK6MA-C       & Hjo                 &          145.2125 &        Simplex & DV Carrier      &       QRV       & JO78DH           \\
+	Repeater          & FM           & SK6BA/R       & Kinna               &          145.6000 &        -600KHz & 1750/DTMF 1     &       QRV       & JO67HM           \\
+	Repeater          & FM           & SK6BA/R       & Kinna               &          434.9500 &          -2MHz & 1750/DTMF 1     &       QRV       & JO67HM           \\
+	Hotspot           & D-Star       & SK6BA-B       & Kinna               &          433.5625 &                & DV Carrier      &       QRV       & JO67HL           \\
+	Repeater          & FM           & SK6QW/R       & Kinnekulle          &          434.9500 &          -2MHz & Carrier         &       QRV       & JO68QO           \\
+	Repeater          & FM           & SK6ROY        & Kinnekulle          &          145.6000 &        -600KHz & 1750/114,8Hz    &       QRV       & JO68QO           \\
+	Repeater          & FM           & SK6RJW        & Kungsbacka          &          145.7250 &        -600KHz & 1750/114,8Hz    &       QRV       & JO67AL           \\
+	Repeater          & FM           & SK6RJW        & Kungsbacka          &          434.7250 &          -2MHz & 1750/114,8Hz    &       QRV       & JO67AL           \\
+	Repeater          & FM           & SK6RPE        & Kungälv             &          145.6125 &        -600KHz & 114,8 Hz        &      Plan       & JO57XU           \\
+	Repeater          & FM           & SK6RPE        & Kungälv             &          434.9000 &          -2MHz & 123,0 Hz        &       QRV       & JO57XU           \\
+	Repeater          & FM           & SA6BXG/R      & Kungälv/Romelanda   &          434.7375 &          -2MHz & 114,8 Hz        &       QRV       & JO67AX           \\
+	Repeater          & FM           & SA6APY/R      & Lidköping           &          434.7000 &          -2MHz & 118,8 Hz        &       QRV       & JO68OM           \\
+	Link              & FM           & SK6LR         & Lidköping           &          145.3500 &                & 118,8 Hz        &       QRV       & JO68NM           \\
+	Link              & FM           & SM6YRB        & Lidköping/Kållandsö &          145.3000 &                & 118,8 Hz        &       QRV       & JO68NP           \\
+	Hotspot           & D-Star       & SK6KA-B       & Limmared            &          433.4375 &                & DV Carrier      &       QRV       & JO67QM           \\
+	Link              & FM           & SM6XIN        & Lundsbrunn          &          434.1250 &                & 118,8 Hz        &       QRV       & JO68RK           \\
+	Repeater          & FM           & SK6IF/R       & Lysekil             &          145.6000 &        -600KHz & 1750/118,8Hz    &       QRV       & JO58TH           \\
+	Repeater          & FM           & SK6IF/R       & Lysekil             &          434.8000 &          -2MHz & 118,8 Hz        &       QRV       & JO58RG           \\
+	Repeater          & D-Star       & SK6IF-C       & Lysekil/Kungshamn   &          145.5750 &        -600KHz & DV Carrier      &       QRV       & JO58PI           \\
+	Repeater          & FM           & SK6QW/R       & Mariestad/Katrinef. &          434.9000 &          -2MHz & Carrier         &       QRV       & JO68VQ           \\
+	Repeater          & FM           & SM6VBT/R      & Mölndal             &          145.7000 &        -600KHz & 118,8Hz         &       QRV       & JO67AP           \\
+	Repeater          & FM           & SM6VBT/R      & Mölndal             &          434.7000 &          -2MHz & 118,8Hz         &       QRV       & JO67AP           \\
+	Repeater          & FM           & SM6VBT/R      & Mölndal             &           29.6900 &        -100KHz & 118,8Hz         &       QRV       & JO67AP           \\
+	Hotspot           & D-Star       & SD6GB-B       & Mölndal             &          434.4625 &                & DV Carrier      &       QRV       & JO67AQ           \\
+		\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+	Hotspot           & D-Star       & SD6GB-E       & Mölndal             &           51.5300 &                & DV Carrier      &       QRV       & JO67AQ           \\
+	Hotspot           & D-Star       & SG6ZDO        & Sjövik              &          433.5750 &                & DV Carrier      &       QRV       & JO67EV           \\
+	Repeater          & D-Star       & SG6APY-B      & Skara               &          434.5875 &          -2MHz & DV Carrier      &       QRV       & JO68RJ           \\
+	Repeater          & FM           & SK6EI/R       & Skövde              &          145.6875 &        -600KHz & 1750Hz          &       QRT       & JO68VK           \\
+	Repeater          & FM           & SK6EI/R       & Skövde              &          434.8250 &          -2MHz & 114,8Hz         &       QRV       & JO68VK           \\
+	Repeater          & FM           & SM6XTV/R      & Stenungsund         &          145.7125 &        -600KHz & 1750/114,8Hz    &       QRV       & JO58VD           \\
+	Repeater          & D-Star       & SK6QA-B       & Stenungsund         &          434.5375 &          -2MHz & DV Carrier      &       QRV       & JO58UB           \\
+	Repeater          & FM           & SK6RWO        & Strömstad           &          434.8250 &        -1,6MHz & 1750            &       QRV       & JO58OW           \\
+	Repeater          & FM           & SK6RIP        & Tanumshede          &          145.6750 &        -600KHz & 1750            &       QRV       & JO58PR           \\
+	Repeater          & FM           & SK6DW/R       & Trollhättan         &          145.7625 &        -600KHz & 114,8Hz         &       QRV       & JO68DG           \\
+	Repeater          & FM           & SK6DW/R       & Trollhättan         &          434.8750 &          -2MHz & 114,8Hz         &       QRV       & JO68BH           \\
+	Repeater          & D-Star       & SK6DW-B       & Trollhättan         &          434.5250 &          -2MHz & DV Carrier      &       QRV       & JO68DG           \\
+	Repeater          & D-Star       & SL6ZAQ        & Uddevalla           &          434.5625 &          -2MHz & DV Carrier      &       QRT       & JO58WH           \\
+	Repeater          & FM           & SK6GX/R       & Uddevalla           &          145.7375 &        -600KHz & 114,8Hz         &       QRV       & JO58WH           \\
+	Repeater          & DMR          & SL6ZAQ        & Uddevalla           &          145.6375 &        -600KHz & 2406001/118,8Hz &       QRV       & JO58WH           \\
+	Repeater          & FM           & SK6GX/R       & Uddevalla/Kungsh.   &          434.7750 &          -2MHz & 1750            &       QRT       & JO58PI           \\
+	Repeater          & FM           & SM6UXW/R      & Ulricehamn          &          434.6750 &          -2MHz & 118,8Hz         &       QRV       & JO67RT           \\
+	Repeater          & FM           & SM6UXW/R      & Ulricehamn          &          145.6750 &        -600KHz & 118,8Hz         &       QRV       & JO67ST           \\
+	Repeater          & FM           & SM6WVY/R      & U-hamn/Blidsb.      &          434.6500 &          -2MHz & 114,8Hz         &       QRT       & JO67RW           \\
+	Link              & FM           &               & U-hamn/Tingsh.      &          434.6750 &                & 71,9Hz          &       QRV       &  \\
+	Repeater          & FM           & SK6DK/R       & Varberg             &          434.7000 &        -1,6MHz & 1750            &       QRV       & JO67EH           \\
+	Repeater          & FM           & SK6DK/R       & Varberg             &          145.7000 &        -600KHz & 1750            &       QRV       & JO67EH           \\
+	Hotspot           & D-Star       & SK6EP-C       & Varberg             &          145.3625 &                & DV Carrier      &       QRT       & JO67BG           \\
+	Repeater          & FM           & SM6MFA/R      & Vänersborg          &          434.7250 &          -2MHz & 1750            &       QRV       & JO68DJ           \\
+	Repeater          & D-Star       & SK6DZ-C       & Vårgårda            &          145.6625 &        -600KHz & DV Carrier      &       QRV       & JO68JA           \\
+	Repeater          & FM           & SK6DZ/R       & Vårgårda            &          434.8500 &          -2MHz & 118,8Hz         &       QRV       & JO68JA
+\end{longtable}
+\normalsize
+\subsection{Repeatrar distrikt 7}
+\footnotesize
+\begin{longtable}{llllrrlcl}
+	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+	Repeater          & FM           & SK7CA/R       & Algutsrum           &          145.6000 &        -600KHz & 1750/79,7Hz     &       QRV       & JO86GQ           \\
+	Repeater          & FM           & SK7CA/R       & Algutsrum           &          434.6000 &          -2MHz & 79,7Hz          &       QRV       & JO86GQ           \\
+	Repeater          & FM           & SM7NTJ/R      & Aneby               &          434.7250 &          -2MHz & 1750Hz          &       QRV       & JO77HU           \\
+		\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+	Repeater          & FM           & SK7REZ        & Blentarp/Romeleås.  &          145.6750 &        -600KHz & 79,7Hz          &       QRV       & JO65TM           \\
+	Repeater          & FM           & SK7EM/R       & Blentarp/Romeleås.  &          434.8500 &          -2MHz & 79,7Hz          &       QRV       & JO65SN           \\
+	Repeater          & DMR          & SM7SKI/R      & Blentarp/Romeleås.  &          434.6125 &          -2MHz & DMR             &      Plan       & JO65TM           \\
+	Repeater          & FM           & SK7RN/R       & Borgholm            &          145.6625 &        -600KHz & 1750Hz          &       QRV       & JO86IU           \\
+	Repeater          & FM           & SK7RNO        & Borgholm/Köp:vik    &          434.6750 &          -2MHz & 1750Hz          &       QRV       & JO86IU           \\
+	Repeater          & FM           & SK7RN/R       & Böda                &          434.9000 &          -2MHz & Carrier         &       QRV       & JO87MG           \\
+	Repeater          & FM           & SK7UO/R       & Emmaboda            &          145.7750 &        -600KHz & 1750Hz          &       QRV       & JO76SP           \\
+	Repeater          & FM           & SM7GYT/R      & Eslöv               &          434.8125 &          -2MHz & 88,5Hz          &       QRV       & JO65PU           \\
+	Repeater          & D-Star       & SK7RNQ-C      & Gladsax             &          145.5875 &        -600KHz & DV Carrier      &       QRV       & JO75DN           \\
+	Repeater          & D-Star       & SK7DS-B       & Glumslöv            &          434.5125 &          -2MHz & DV Carrier      &       QRV       & JO65JW           \\
+	Repeater          & FM           & SK7RYR        & Gnosjö              &          145.6875 &        -600KHz & 1750Hz          &       QRV       & JO67UI           \\
+	Repeater          & FM           & SK7OL/R       & Hallandsåsen        &          145.7875 &        -600KHz & 79,7Hz          &       QRV       & JO66LJ           \\
+	Repeater          & D-Star       & SK7RQX-B      & Hallandsåsen        &          434.5750 &          -2MHz & DV Carrier      &       QRV       & JO66LJ           \\
+	Repeater          & FM           & SK7CY         & Helsingborg         &         1297.2000 &          -6MHz & 1750Hz          &       QRV       & JO66IB           \\
+	Repeater          & FM           & SK7REE        & H:borg/Söderåsen    &          145.6500 &        -600KHz & 79,7Hz          &       QRV       & JO66NB           \\
+	Repeater          & DMR/FM       & SK7REE        & H:borg/Söderåsen    &          434.6500 &          -2MHz & DMR+ 240702     &       QRV       & JO66NB           \\
+	Repeater          & FM           & SK7REE/R      & H:borg/Söderåsen    &           51.8500 &        -600KHz & 79,7Hz          &       QRV       & JO66NB           \\
+	Repeater          & FM           & SK7GH/R       & Hillerstorp         &          434.6000 &          -2MHz & 1750            &       QRV       & JO67WH           \\
+	Link              & FM           & SM7KUY/R      & Hosaby              &          145.4250 &                & 79,7Hz          &       QRV       & JO76IA           \\
+	Repeater          & FM           & SK7RMV        & Hultsfred/Vimmerby  &          145.7625 &        -600KHz & 1750            &       QRV       & JO77WL           \\
+	Repeater          & FM           & SK7RBK        & Hässleh./Bjärnum    &          434.9500 &          -2MHz & 1750            &       QRV       & JO66UH           \\
+	Repeater          & FM           & SA7ATK/R      & Hässleh./Tormestorp &          434.9750 &          -2MHz & 79,7Hz          &       QRV       & JO66UC           \\
+	Repeater          & FM           & SK7RBK        & Hässleh./Bjärnum    &          145.7625 &        -600KHz & 1750            &       QRV       & JO66UH           \\
+	Repeater          & FM           & SK7RGI        & Jönköping           &          434.7500 &        -1,6MHz & 1750/DTMF 6     &       QRV       & JO77CS           \\
+	Repeater          & FM           & SK7RGI        & Jönköping           &           29.6800 &        -100KHz & 1750/DTMF 6     &       QRV       & JO77BS           \\
+	Link              & FM           & SM7TYU        & Jönköping           &          145.4000 &                & Carrier         &       QRV       & JO77BS           \\
+	Repeater          & FM           & SK7RVZ        & Jönk./Huskvarna     &          145.7875 &        -600KHz & 1750            &       QRV       & JO77DT           \\
+	Repeater          & FM           & SK7RGI        & Jönk./Taberg        &          145.7500 &        -600KHz & 1750            &       QRV       & JO77CQ           \\
+	Repeater          & FM           & SM7JPI/R      & Karlshamn           &          434.9250 &          -2MHz & 1750            &       QRT       & JO76KE           \\
+	Repeater          & FM           & SK7RFJ        & Karlskrona          &          145.7500 &        -600KHz & 1750            &       QRV       & JO76TE           \\
+	Repeater          & FM           & SK7FK/R       & Karlskrona          &          434.7500 &          -2MHz & 1750            &       QRV       & JO76TE           \\
+	Repeater          & FM           & SM7YWE/R      & Karlskrona          &          434.8750 &          -2MHz & 79,7Hz          &       QRV       & JO76RH           \\
+	Repeater          & FM           & SK7BQ/R       & Kristianstad        &          145.7375 &        -600KHz & 79,7Hz          &       QRV       & JO76AA           \\
+	Repeater          & FM           & SK7BQ/R       & Kristianstad        &          434.6000 &          -2MHz & 1750/79,7Hz     &       QRV       & JO76CA           \\
+		\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+	Repeater          & D-Star       & SG7TIX-B      & Kristianstad        &          434.5250 &          -2MHz & DV Carrier      &       QRV       & JO76DB           \\
+	Repeater          & D-Star       & SK7RMQ-C      & Linderöd            &          145.5750 &        -600KHz & DV Carrier      &       QRV       & JO65VW           \\
+	Repeater          & DMR          & SG7DMR        & Linderöd            &          434.5500 &          -2MHz & DMR240700       &       QRV       & JO65VW           \\
+	Repeater          & FM           & SK7MO/R       & Ljungby             &          145.7250 &        -600KHz & 1750Hz          &       QRV       & JO66XT           \\
+	Repeater          & FM           & SK7RJL/R      & Lund                &          434.7250 &          -2MHz & 79,7Hz          &       QRV       & JO65OR           \\
+	Repeater          & DMR          & SK7RJL        & Lund                &          434.5875 &          -2MHz & DMR             &       QRV       & JO65OR           \\
+	Repeater          & FM           & SM7XCO/R      & Lyby                &          434.7000 &          -2MHz & 79,7Hz          &       QRV       & JO65TU           \\
+	Repeater          & FM           & SK7RRV        & Lönsboda            &          434.9000 &        -1,6MHz & 1750            &       QRV       & JO76DJ           \\
+	Hotspot           & D-Star       & SK7RRV-C      & Lönsboda            &          144.8125 &                & DV Carrier      &       QRV       & JO76DJ           \\
+	Repeater          & FM           & SK7REP        & Malmö               &          434.7750 &          -2MHz & 1750            &       QRV       & JO65MO           \\
+	Repeater          & FM           & SK7REP        & Malmö               &          145.7750 &        -600KHz & 1750            &       QRV       & JO65MO           \\
+	Repeater          & FM           & SK7REP        & Malmö               &         1297.1750 &          -6MHz & 1750            &       QRV       & JO65MO           \\
+	Link              & FM           & SK7DX         & Malmö               &          145.3000 &                & Simplex         &       QRT       & JO65MO           \\
+	Repeater          & D-Star       & SM7YKX-B      & Malmö               &          434.9500 &          -2MHz & DV Carrier      &       QRV       & JO65MN           \\
+	Repeater          & D-Star       & SM7XAA        & Malmö               &          434.5250 &          -2MHz & DV Carrier      &       QRV       & JO65MN           \\
+	Repeater          & FM           & SM7LNT/R      & Mörrum              &          434.8250 &          -2MHz & 79,7Hz          &       QRV       & JO76IE           \\
+	Repeater          & FM           & SL7ZXW/R      & Nybro               &          145.6875 &        -600KHz & 1750            &       QRV       & JO76VQ           \\
+	Repeater          & FM           & SK7HR/R       & Nässjö              &          145.6500 &        -600KHz & 1750            &       QRV       & JO77IP           \\
+	Repeater          & FM           & SK7RFH        & Nässjö              &          434.8500 &          -2MHz & 1750/DTMF 6     &       QRV       & JO77IP           \\
+	Repeater          & FM           & SK7RFH        & Nässjö              &         1297.0500 &          -6MHz & 1750            &       QRT       & JO77IP           \\
+	Repeater          & FM           & SK7JC/R       & Olofström           &          434.6250 &          -2MHz & 1750            &       QRT       & JO76KF           \\
+	Repeater          & FM           & SK7RGM        & O./Boafallsbacke    &          145.7000 &        -600KHz & 79,7Hz          &       QRV       & JO76FF           \\
+	Repeater          & FM           & SK7RIH        & Oskarshamn          &          145.7250 &        -600KHz & 1750            &       QRV       & JO87FG           \\
+	Repeater          & FM           & SK7RIH/R      & Oskarshamn          &          434.7250 &          -2MHz & 1750            &       QRV       & JO87EG           \\
+	Repeater          & FM           & SK7RIH        & Oskarshamn          &           51.9100 &        -600KHz & 1750            &       QRV       & JO87EG           \\
+	Repeater          & FM           & SA7CDA/R      & Simrishamn          &          434.6375 &          -2MHz & 79,7Hz          &       QRV       & JO75CL           \\
+	Repeater          & D-Star       & SK7RDS-C      & Svedala             &          145.5687 &        -600KHz & DV Carrier      &       QRV       & JO65OL           \\
+	Hotspot           & D-Star       & SK7JL-B       & Tving               &          433.4750 &                & DV Carrier      &       QRV       & JO76RH           \\
+	Repeater          & FM           & SK7IJ/R       & Vetlanda            &          145.6250 &        -600KHz & 1750/156,7Hz    &       QRV       & JO77OL           \\
+	Repeater          & FM           & SK7IJ/R       & Vetlanda            &          434.6250 &          -2MHz & 156,7Hz         &       QRV       & JO77OL           \\
+	Repeater          & FM           & SK7RNQ        & Vitaby              &          145.6125 &        -600KHz & 79,7Hz          &       QRV       & JO75             \\
+	Repeater          & FM           & SK7GH/R       & Värnamo             &          145.6000 &        -600KHz & 1750/156,7Hz    &       QRV       & JO77BF           \\
+	Repeater          & FM           & SK7JD/R       & Västervik           &          145.6750 &        -600KHz & Carrier         &       QRV       & JO87HS           \\
+	Repeater          & D-Star       & SK7HW-B       & Växjö               &          434.7000 &          -2MHz & DV Carrier      &       QRV       & JO76KU
+\end{longtable}
+\normalsize
 %%%%%%%%%% Bandplaner här roterade 90 för enklast läsning %%%%%%%%%%
 	\section{Bandplan 6m 50--52 MHz}
 	\begin{tabular}{rrrll}
