Påbörjade frekvenslista för marin VHF

--- a/body.tex
+++ b/body.tex
@@ -302,6 +302,31 @@ Jakt K5 är öppen att användas för andra ändamål och sammanfaller ej med ma
 
 [N] Smalbandig FM-modulation skall användas pga tätt liggande kanaler.
 
+\subsection{Marin VHF}
+
+Det marina VHF-bandet är ofta intressant att lyssna på. Det är dock ett licenspliktigt band och du får inte sända på detta band om du ej har klarat en särskild certifiering och har en licens för detta. Var uppmärksam på nödtrafik och annan trafik så den ej störs. Det marina VHF-bandet indelas i kanaler om 25~kHz och det finns både simplex och duplex-kanaler som kan användas i bandet. Bandet är avsett för kommunikation skepp till skepp samt mellan skepp och kustradiostationer.
+
+Svenska kustradiostationer inom (parentes).
+
+\begin{longtable}{rrrl}
+	\textbf{K} & \textbf{Skepp} & \textbf{Kust} & \textbf{Användning Sverige} \\ \hline
+	        L1 &        155,500 &       Simplex & Fritidsbåtar     \\
+	        L2 &        155,525 &       Simplex & Fritidsbåtar     \\
+	        F1 &        155,625 &       Simplex & Yrkesfiskefartyg \\
+	        L3 &        155,650 &       Simplex & ---              \\
+	        F2 &        155,775 &       Simplex & Yrkesfiskefartyg \\
+	        F3 &        155,825 &       Simplex & Yrkesfiskefartyg \\
+	         0 &        156,000 &       160,600 &  \\
+	         1 &        156,050 &       160,560 & (Kinnekulle)     \\
+	         2 &        156,100 &       160,700 &  \\
+	         3 &        156,150 &       160,750 &\\
+	         4 & 156,200 & 160,800 & \\
+	         5 & 156,250 & 160,850 & \\
+	         6 & 156,300 & 156,300 & \\
+	         
+\end{longtable}
+$>>>>>$ Ej klar tabell
+
 \subsection{Kortdistansradio (KDR)}
 
 Kallas även SRBR för Short Range Business Radio.
